--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -106,7 +106,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>ImageLabel</string>
+       <string>Open image to start</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -129,7 +129,6 @@
      <string>File</string>
     </property>
     <addaction name="actionOpen"/>
-    <addaction name="actionSave"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
