use the spiraliser widget to draw the image as well as the spiral, got rid of the label

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -98,18 +98,12 @@
      </widget>
     </item>
     <item row="0" column="0" colspan="4">
-     <widget class="QLabel" name="imageLabel">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+     <widget class="QFrame" name="imageFrame">
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
       </property>
-      <property name="text">
-       <string>Open image to start</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
       </property>
      </widget>
     </item>
